[package]
name = "cch23-drc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6.1"
actix-files = "0.6.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
onig = { version = "6", default-features = false }
image = "0.24"
lazy_static = "1.4.0"
base64 = "0.21.5"
tracing = "0.1"
rustemon = "3.0"
